# CLOUD-FLY-PRLATFORM

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  architecture.cpp
config/dev/: config.json
config/prod/: config.json
config/test/: config.json
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  main.cpp
include/api/: api.h
include/architecture/: architecture.h
include/compute/: compute_manager.h
include/container/: container_manager.h
include/core/: CoreEngine.h  LoadBalancer.h  MultiCoreEngine.h  NetworkManager.h  ParentCore.h  StorageManager.h  core_optimizer.h
include/core/blockchain/: MultiCoreBlockchain.h
include/core/cache/: cache_types.h  multilevel_cache.h
include/core/drivers/: atomic_ops.h  blockchain_ops.h  compute_ops.h  cpu_info.h  fast_memcpy.h  math_ops.h  memory_ops.h  network_ops.h  thread_ops.h
include/core/error_handling/: core_errors.h
include/core/memory/: memory_manager.h
include/core/optimization/: simd_ops.h
include/core/threading/: affinity.h  thread_pool.h
include/jit/: jit_compiler.h
include/load_balancer/: load_balancer.h
include/memory/: memory_manager.h
include/monitoring/: monitoring_system.h
include/network/: network_manager.h
include/storage/: storage_manager.h
k8s/: configmap.yaml  deployment.yaml  service.yaml
scripts/deploy/: deploy.sh
src/: CMakeLists.txt
src/accelerators/: CMakeLists.txt  accelerator_manager.cpp  accelerators.cpp
src/api/: api.cpp
src/architecture/: architecture.cpp
src/blockchain/: CMakeLists.txt  distributed_ledger.cpp
src/cache/: CMakeLists.txt  adaptive_cache.cpp  cache_manager.cpp
src/compute/: compute_manager.cpp
src/container/: CMakeLists.txt  container_manager.cpp
src/core/: CMakeLists.txt  CoreEngine.cpp  LoadBalancer.cpp  MultiCoreEngine.cpp  NetworkManager.cpp  ParentCore.cpp  StorageManager.cpp  core_optimizer.cpp  engine.cpp
src/core/blockchain/: MultiCoreBlockchain.cpp
src/core/drivers/: atomic_ops.c  blockchain_ops.c  buffer_ops.c  compute_ops.c  cpu_info.c  fast_memcpy.c  math_ops.c  memory_ops.c  network_ops.c  thread_ops.c
src/core/error_handling/: core_errors.c
src/core/optimization/: simd_ops.c
src/diagnostics/: CMakeLists.txt  diagnostics.cpp  diagnostics_manager.cpp
src/enclave/: CMakeLists.txt  enclave.cpp  enclave_manager.cpp
src/integration/: CMakeLists.txt  integration.cpp  integration_manager.cpp
src/jit/: CMakeLists.txt  jit_compiler.cpp
src/ledger/: CMakeLists.txt  distributed_ledger.cpp
src/load_balancer/: CMakeLists.txt  load_balancer.cpp
src/memory/: memory_manager.cpp
src/monitoring/: CMakeLists.txt  monitoring_system.cpp
src/network/: CMakeLists.txt  network_manager.cpp
src/packet_processor/: CMakeLists.txt  advanced_packet_processor.cpp  packet_processor.cpp
src/storage/: CMakeLists.txt  storage_manager.cpp
src/sync/: CMakeLists.txt  advanced_synchronization.cpp  lockfree_structures.cpp  sync_manager.cpp
src/tracing/: CMakeLists.txt  distributed_tracing.cpp  tracing_manager.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  blockchain_tests.cpp  core_tests.cpp  load_balancer_tests.cpp  multi_core_tests.cpp  network_manager_tests.cpp  parent_core_tests.cpp  storage_manager_tests.cpp
tests/performance/: CMakeLists.txt  performance_test.cpp
tests/unit/: CMakeLists.txt
tests/unit/blockchain/: CMakeLists.txt  blockchain_test.cpp
tests/unit/core/: CMakeLists.txt  CoreEngineTest.cpp
tests/unit/network/: CMakeLists.txt
tests/unit/storage/: CMakeLists.txt  storage_test.cpp
